re PR middle-end/54385 (ICE in pre_and_rev_post_order_compute, at cfganal.c:873)

PR middle-end/54385
	* postreload.c (reload_cse_simplify): Return a bool indicating
	whether the CFG was changed.
	(reload_cse_regs_1): Traverse the CFG instead of the insns chain.
	Cleanup the CFG if edges may have been removed.
	(reload_cse_regs): Update.

From-SVN: r193359